<resources>
    <string name="app_name">E_commersClone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="all_categories">AllCategories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="cart">ThisIsCart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_cart_is_empyt">your cart is empyt</string>
    <string name="delivery_to_sadiq">Delivery to sadiq</string>
    <string name="this_is_tittle">THis is tittle</string>
    <string name="groceries">Groceries</string>
    <string name="this_is_proce">this is proce</string>
    <string name="place_order">Place Order</string>
    <string name="this_is_total_price">this is total price</string>
</resources>