<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:textSize="20sp"
        android:text="@string/delivery_to_sadiq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        app:cardCornerRadius="@dimen/dimen_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:id="@+id/itemcount"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/groceries"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
<ImageView
    android:background="@color/Red_200"
    android:id="@+id/imgp"
    android:src="@drawable/ic_launcher_foreground"
    app:layout_constraintTop_toBottomOf="@id/itemcount"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_width="@dimen/dimen_150"
    android:layout_height="@dimen/dimen_150">

</ImageView>

            <TextView
                android:textColor="@color/black"
                android:id="@+id/tvtittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/this_is_tittle"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.552"
                app:layout_constraintStart_toEndOf="@id/imgp"
                app:layout_constraintTop_="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemcount">

            </TextView>

            <TextView
                android:textColor="@color/black"
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/this_is_proce"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.469"
                app:layout_constraintStart_toEndOf="@id/imgp"
                app:layout_constraintTop_toBottomOf="@id/tvtittle">

            </TextView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/blay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_margin="@dimen/dimen_20"
            android:id="@+id/button"
            android:layout_width="@dimen/dimen_150"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/Red_200"
            android:text="@string/place_order" />

        <TextView
            android:layout_marginRight="@dimen/dimen_20"
            android:textColor="@color/black"
            android:id="@+id/tvtp"
            android:text="@string/this_is_total_price"
            android:textStyle="normal"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>